# spotify_sync

./: .cache-jamesbairdhutchinson  .config.example  .flake8  .gitignore  .pre-commit-config.yaml  1.sh  DEVELOP.md  Dockerfile  Dockerfile copy  README.md  config.json.example  lol.py  main.py  pyproject.toml  requirements.txt  requirements.txt.old  scratch.py  startup.sh
.github/workflows/: ci.yml  pre_release.yml  release.yml
config/: .arl  authCredentials.json  config.json
data/: deezer_urls.txt  processed_songs.json  spotify_followed_artists.json
deemix_settings/: config.json  settings.json  var_reference.txt
spotify_sync/: __main__.py  appdirs_.py  autoscan_.py  cli.py  click_helper.py  common.py  config.py  dataclasses.py  deemix_.py  download.py  errors.py  io_.py  log.py  match.py  metrics.py  notification.py  pushover_.py  spotify_.py  stats.py  webserver.py
spotify_sync/backup/: providers.py
spotify_sync/data/: config.json.example  config_schema.json  config_schema_legacy.json
spotify_sync/tests/: test_notification.py
src/: .cache-jamesbairdhutchinson  actions.py  app.py  authorize.py  autoscan_.py  autoscan_api.py  banner.py  config.py  deemix_.py  deemix_api.py  deezer_.py  deezer_api.py  deezer_download.py  download.py  exportDeezerLinksFromProcessedSongs.py  functions.py  generateFollowedArtistsJson.py  generateLikedSongsJson.py  git_.py  git_api.py  io_.py  log.py  plex_autoscan.py  processLikedSongs.py  pushover_.py  pushover_api.py  spotify_.py  spotify_api.py  transform.py
templates/: index.html
