[tool.poetry]
name = "spot_sync"
version = "1.0.4"
description = "A schedulable, configurable CLI downloader for Spotify accounts"
authors = ["JBH <admin@jbh.cloud>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.spotify-sync.jbh.cloud"
repository = "https://github.com/jbh-cloud/spotify_sync"
packages = [
    { include = "spotify_sync" },
]

[tool.poetry.dependencies]
python = "^3.8"
ss-deemx = "^3.6.8"
spotipy = "^2.19.0"
deezer-py = "^1.3.7"
chump = "^1.6.0"
requests = "^2.25.1"
tabulate = "^0.8.7"
psutil = "^5.9.0"
jsonschema = "^4.4.0"
click = "^8.1.3"
appdirs = "^1.4.4"
click-option-group = "^0.5.3"
pywin32 = {version = "^304", platform = "windows"}
flatdict = "^4.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
spotify_sync = "spotify_sync.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
